# clips-rules-rebuild

./: .gitignore  APPLIED_CHANGES.md  CMakeLists.txt  INSTALL.txt  LICENSE  LICENSE-clipspy  LICENSE-core  README.md
.github/workflows/: ci.yml  linuxbuild.yml  macbuild.yml  windowsbuild.yml
clipspy-0.3.3/: setup.cfg  setup.py
clipspy-0.3.3/clips/: clips_build.py
clipspy-1.0.0/: setup.cfg
clipspy-1.0.0/clips/: clips_build.py
clipspy-1.0.0/doc/: make.bat
clipspy-1.0.4/clips/: clips_build.py
clipspy-1.0.6/clips/: clips_build.py
core/: makefile.win
core-6.31/: CMakeLists.txt
core-6.4.1/: CMakeLists.txt  facthsh.c
core-6.4.2/: CMakeLists.txt  facthsh.c
core-6.40/: CMakeLists.txt  x.c
runtime-loader/: CMakeLists.txt  README.md
runtime-loader/app/: main.c
runtime-loader/include/: dispatcher.h  loader.h  locker.h  uthash.h
runtime-loader/plugins/Cube/: CMakeLists.txt  Cube.c
runtime-loader/plugins/CubeForTesting/: CMakeLists.txt  CubeForTesting.c
runtime-loader/plugins/IsOdd/: CMakeLists.txt  IsOdd.c  is_odd_aarch64.S  is_odd_arm64_msvc.asm  is_odd_x64_msvc.asm  is_odd_x86_64.S
runtime-loader/plugins/IsPrime/: CMakeLists.txt  IsPrime.c  is_prime_aarch64.S  is_prime_arm64_msvc.asm  is_prime_x64_msvc.asm  is_prime_x86_64.S
runtime-loader/plugins/MatrixMultiplyAMX/: CMakeLists.txt  MatrixMultiplyAMX.c
runtime-loader/src/: dispatcher.c  loader.cpp  locker.cpp
runtime-loader/tests/: bounce_cleanup.c  concurrent_load.cpp  concurrent_name_collision.cpp  cross_env_unload.c  hot_update.c  isodd.c  isprime.c  load_failure_codes.c  matrixmultiply.c  multifunction_unload.c  name_collision.c  plugin_names.h  run_bounded.h  setup_constructs.c  teardown_lifecycle.c  test.c  udf_registration_failure.c  unload_not_loaded.c  unload_without_deffunction.c
test-core-6.4.1/: 002_interactive.c  004_AssertFactTemplate.c  007a_UserDefinedFunction_Lib2.c  008_UserDefinedStringFunction.c  CMakeLists.txt
test-core-6.4.1/bdi/uthash/: CMakeLists.txt  example.c
test-core-6.4.1/bdi/uuid/: CMakeLists.txt  uuid4.c  uuid4.h
test-core-6.4.1/runtime-loader/: CMakeLists.txt  locker.cpp
test-core-6.4.1/runtime-loader/plugins/: Cube.c
test-core-6.4.1/runtime-loader/tests/: test.c
test-core-6.4.2/: 004_AssertFactTemplate.c  007a_UserDefinedFunction_Lib.c  007a_UserDefinedFunction_Lib3.c  007b_UserDefinedFunction_LibWrapper.c  CMakeLists.txt
test-core-6.4.2/bdi/: 009_TemplatesBDI.c  CMakeLists.txt
test-core-6.4.2/bdi/uthash/: example2.c  example_uuid.c
test-core-6.4.2/runtime-loader/: CMakeLists.txt
test-core-6.4.2/runtime-loader/include/: loader.h
test-core-6.4.2/runtime-loader/tests/: test.c
test-core-6.40/: 001_Env_and_assert.c  003_AssertFact.c  005_UserDefinedFunction.c  006_UserDefinedFunction_Runtime.c  007b_UserDefinedFunction_LibWrapper.c  007b_UserDefinedFunction_Runtime_win_wrap.cpp  CMakeLists.txt
test-core-6.40/example-loader/: CMakeLists.txt  dispatcher.c  loader.cpp  locker.cpp  test.c
test-core-6.40/example-loader/include/: dispatcher.h  loader.h  locker.h
test-core-6.40/example-loader/tests/: test.c
