cmake_minimum_required(VERSION 3.12)
project(clips)
INCLUDE_DIRECTORIES(/usr/include/ )
LINK_DIRECTORIES(/usr/lib64/)

option(static-cli "statically compile CLI" OFF)
option(build-631 "build clips-6.31 and clipspy 0.3.3 version" OFF)
option(build-640 "build clips-6.40 and clipspy 1.0.0 version" OFF)
option(build-641-4 "build clips-6.41 and clipspy 1.0.4 version" OFF)
option(build-641-5 "build clips-6.41 and clipspy 1.0.5 version" OFF)
option(build-641-6 "build clips-6.41 and clipspy 1.0.6 version" OFF)
option(build-642 "build clips-6.42 and clipspy 1.0.6 version" ON)

if (build-631)
	add_subdirectory ("core-6.31")
endif()
if (build-640)
	add_subdirectory ("core-6.40")
endif()
if (build-641-4)
	add_subdirectory ("core-6.4.1")
endif()
if (build-641-5)
	add_subdirectory ("core-6.4.1")
endif()
if (build-641-6)
	add_subdirectory ("core-6.4.1")
endif()
if (build-642)
	add_subdirectory ("core-6.4.2")
endif()
enable_testing()


if (build-631)
	# there are no 6.31 tests
endif()
if (build-640)
	add_subdirectory ("test-core-6.40")
endif()
if (build-641-4)
	add_subdirectory ("test-core-6.4.1")
endif()
if (build-641-5)
	add_subdirectory ("test-core-6.4.1")
endif()
if (build-641-6)
	add_subdirectory ("test-core-6.4.1")
endif()
if (build-642)
	add_subdirectory ("test-core-6.4.2")
endif()
