
set(HEADER_FILES
        symbol.h
        dffnxbin.h
        cstrncmp.h
        generate.h
        lgcldpnd.h
        insmngr.h
        msgpass.h
        envrnmnt.h
        genrccom.h
        prntutil.h
        factmngr.h
        cstrccom.h
        globlbin.h
        inspsr.h
        globldef.h
        cstrcpsr.h
        evaluatn.h
        symblcmp.h
        miscfun.h
        rulepsr.h
        objrtfnx.h
        tmpltlhs.h
        expressn.h
        modulbin.h
        reteutil.h
        modulutl.h
        crstrtgy.h
        factrete.h
        classpsr.h
        dffnxfun.h
        insquery.h
        dffctbsc.h
        constrnt.h
        cstrnutl.h
        rulebsc.h
        multifld.h
        cstrnbin.h
        memalloc.h
        modulbsc.h
        conscomp.h
        globlcom.h
        clips.h
        classini.h
        factprt.h
        default.h
        iofun.h
        defins.h
        msgcom.h
        classexm.h
        filecom.h
        insmoddp.h
        pattern.h
        proflfun.h
        tmpltfun.h
        ruledlt.h
        rulecstr.h
        genrcfun.h
        sortfun.h
        factmch.h
        usrsetup.h
        genrcbin.h
        dffnxcmp.h
        bload.h
        rulecmp.h
        sysdep.h
        tmpltdef.h
        factqury.h
        genrccmp.h
        classinf.h
        tmpltbsc.h
        objrtbld.h
        utility.h
        dffctpsr.h
        analysis.h
        globlcmp.h
        constrct.h
        filertr.h
        dffctcmp.h
        extnfunc.h
        prcdrpsr.h
        argacces.h
        tmpltbin.h
        insfile.h
        tmpltutl.h
        symblbin.h
        setup.h
        exprnbin.h
        drive.h
        immthpsr.h
        bmathfun.h
        object.h
        agenda.h
        bsave.h
        inherpsr.h
        objcmp.h
        factqpsr.h
        genrcexe.h
        pprint.h
        reorder.h
        watch.h
        tmpltpsr.h
        factbld.h
        msgfun.h
        cstrnchk.h
        factcmp.h
        rulebld.h
        strngfun.h
        objrtbin.h
        genrcpsr.h
        prcdrfun.h
        dfinscmp.h
        cstrcbin.h
        dffnxpsr.h
        clsltpsr.h
        dffnxexe.h
        insmult.h
        tmpltrhs.h
        ruledef.h
        developr.h
        factbin.h
        rulebin.h
        msgpsr.h
        incrrset.h
        factfun.h
        cstrnops.h
        userdata.h
        dffctbin.h
        constant.h
        objrtmch.h
        rulecom.h
        engine.h
        retract.h
        commline.h
        emathfun.h
        rulelhs.h
        factrhs.h
        router.h
        insqypsr.h
        strngrtr.h
        multifun.h
        factcom.h
        match.h
        dfinsbin.h
        scanner.h
        objbin.h
        prdctfun.h
        prccode.h
        moduldef.h
        exprnpsr.h
        classfun.h
        globlpsr.h
        objrtcmp.h
        network.h
        dffctdef.h
        exprnops.h
        factlhs.h
        cstrccmp.h
        globlbsc.h
        classcom.h
        textpro.h
        objrtgen.h
        facthsh.h
        insfun.h
        parsefun.h
        tmpltcmp.h
        factgen.h
        inscom.h
        modulcmp.h
        cstrnpsr.h
        modulpsr.h)
set(SOURCE_FILES
        dffnxcmp.c
        symbol.h
        globlcom.c
        dffnxbin.h
        cstrncmp.h
        facthsh.c
        constrnt.c
        tmpltcmp.c
        generate.h
        globlbin.c
        generate.c
        lgcldpnd.h
        insmngr.h
        msgpass.h
        envrnmnt.h
        genrccom.h
        immthpsr.c
        parsefun.c
        prcdrpsr.c
        prntutil.h
        factmngr.h
        cstrccom.h
        globlbin.h
        inspsr.h
        factlhs.c
        globldef.h
        cstrcpsr.h
        tmpltlhs.c
        sortfun.c
        insquery.c
        evaluatn.h
        symblcmp.h
        miscfun.h
        modulpsr.c
        rulepsr.h
        classpsr.c
        objrtfnx.h
        tmpltlhs.h
        dffnxexe.c
        expressn.h
        rulebld.c
        modulbin.h
        filecom.c
        reteutil.h
        modulutl.h
        crstrtgy.h
        factrete.h
        classpsr.h
        dffnxfun.h
        classexm.c
        lgcldpnd.c
        insquery.h
        dffctbsc.h
        constrnt.h
        classfun.c
        cstrnutl.h
        factprt.c
        rulebsc.h
        multifld.h
        envrnmnt.c
        pattern.c
        classini.c
        cstrnbin.h
        factmngr.c
        exprnbin.c
        bmathfun.c
        memalloc.h
        textpro.c
        modulbsc.h
        conscomp.c
        conscomp.h
        globlcom.h
        insmult.c
        miscfun.c
        dffctcmp.c
        objbin.c
        clips.h
        classini.h
        factprt.h
        dfinsbin.c
        default.h
        genrccom.c
        proflfun.c
        factcom.c
        iofun.h
        factqpsr.c
        defins.h
        msgcom.h
        rulepsr.c
        commline.c
        classexm.h
        tmpltbin.c
        dffctbsc.c
        filecom.h
        tmpltutl.c
        insmoddp.h
        incrrset.c
        pattern.h
        proflfun.h
        insmngr.c
        tmpltfun.h
        ruledlt.h
        symblbin.c
        rulebsc.c
        rulecstr.h
        genrcfun.h
        rulecom.c
        msgfun.c
        tmpltdef.c
        iofun.c
        sortfun.h
        factmch.h
        insfile.c
        usrsetup.h
        multifun.c
        ruledef.c
        genrcbin.h
        multifld.c
        objrtcmp.c
        dffnxcmp.h
        dffctbin.c
        bload.h
        cstrnchk.c
        rulecmp.h
        sysdep.h
        tmpltdef.h
        factqury.h
        genrccmp.h
        exprnops.c
        bload.c
        factqury.c
        inherpsr.c
        classinf.h
        tmpltbsc.h
        prdctfun.c
        watch.c
        objrtbld.h
        utility.h
        dffctpsr.h
        inspsr.c
        analysis.h
        rulelhs.c
        dffctpsr.c
        msgcom.c
        factbld.c
        factbin.c
        genrccmp.c
        globlcmp.h
        constrct.h
        reorder.c
        filertr.h
        dffctcmp.h
        extnfunc.h
        prcdrpsr.h
        argacces.h
        dffnxbin.c
        tmpltbin.h
        insfile.h
        engine.c
        tmpltutl.h
        symblbin.h
        scanner.c
        setup.h
        analysis.c
        userfunctions.c
        cstrnbin.c
        exprnbin.h
        prntutil.c
        drive.h
        immthpsr.h
        bmathfun.h
        objcmp.c
        object.h
        agenda.h
        factmch.c
        bsave.h
        inherpsr.h
        objcmp.h
        factqpsr.h
        genrcexe.h
        argacces.c
        objrtgen.c
        dffctdef.c
        globlcmp.c
        objrtmch.c
        dfinscmp.c
        pprint.h
        reorder.h
        watch.h
        tmpltpsr.h
        modulbsc.c
        factbld.h
        agenda.c
        tmpltfun.c
        emathfun.c
        genrcpsr.c
        tmpltrhs.c
        cstrcpsr.c
        objrtfnx.c
        insmoddp.c
        factfun.c
        msgfun.h
        cstrnchk.h
        cstrncmp.c
        factcmp.h
        rulebld.h
        inscom.c
        memalloc.c
        factrhs.c
        strngfun.h
        objrtbin.h
        default.c
        genrcpsr.h
        insqypsr.c
        prcdrfun.h
        dfinscmp.h
        makefile.win
        cstrcbin.h
        dffnxpsr.h
        evaluatn.c
        dffnxfun.c
        objrtbin.c
        expressn.c
        clsltpsr.h
        dffnxexe.h
        modulcmp.c
        insmult.h
        insfun.c
        tmpltrhs.h
        ruledef.h
        modulutl.c
        cstrnutl.c
        factcmp.c
        developr.h
        factbin.h
        cstrccom.c
        strngfun.c
        drive.c
        globldef.c
        rulebin.h
        msgpsr.h
        objrtbld.c
        incrrset.h
        tmpltbsc.c
        ruledlt.c
        factfun.h
        cstrnops.h
        factgen.c
        userdata.c
        userdata.h
        dffctbin.h
        msgpass.c
        globlbsc.c
        genrcexe.c
        genrcbin.c
        classinf.c
        filertr.c
        crstrtgy.c
        constant.h
        cstrnpsr.c
        objrtmch.h
        rulecom.h
        engine.h
        exprnpsr.c
        defins.c
        prccode.c
        tmpltpsr.c
        retract.h
        commline.h
        emathfun.h
        rulelhs.h
        factrhs.h
        router.h
        insqypsr.h
        strngrtr.h
        multifun.h
        extnfunc.c
        prcdrfun.c
        factcom.h
        match.h
        globlpsr.c
        dfinsbin.h
        scanner.h
        makefile
        pprint.c
        retract.c
        rulecmp.c
        rulebin.c
        objbin.h
        dffnxpsr.c
        moduldef.c
        modulbin.c
        prdctfun.h
        router.c
        prccode.h
        moduldef.h
        msgpsr.c
        constrct.c
        exprnpsr.h
        classfun.h
        globlpsr.h
        symblcmp.c
        objrtcmp.h
        reteutil.c
        network.h
        dffctdef.h
        exprnops.h
        rulecstr.c
        strngrtr.c
        bsave.c
        factlhs.h
        cstrccmp.h
        factrete.c
        cstrcbin.c
        globlbsc.h
        classcom.h
        sysdep.c
        genrcfun.c
        textpro.h
        objrtgen.h
        facthsh.h
        symbol.c
        insfun.h
        parsefun.h
        tmpltcmp.h
        factgen.h
        developr.c
        inscom.h
        clsltpsr.c
        classcom.c
        cstrnops.c
        modulcmp.h
        utility.c
        cstrnpsr.h
        modulpsr.h)



if(WIN32)
    add_library(clips SHARED main.c ${SOURCE_FILES})
    add_library(clips-static main.c ${SOURCE_FILES})
    add_definitions(-DWIN_MVC=1)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    add_executable(clipscli main.c)
    if(static-cli)
        set_property(TARGET clipscli PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")  # static link MSVC Runtime
        target_link_libraries(clipscli clips-static )
    else()
        target_link_libraries(clipscli clips )
    endif()

    install(TARGETS clipscli clips clips-static
            RUNTIME DESTINATION bin
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)

else()
    add_library(clips SHARED ${SOURCE_FILES})
    add_library(clips-static ${SOURCE_FILES})
    set_target_properties(clips PROPERTIES LINK_FLAGS_RELEASE -s)
    set_target_properties(clips-static PROPERTIES LINK_FLAGS_RELEASE -s)
    target_link_libraries(clips m)
    target_link_libraries(clips-static m)
    add_executable(clipscli main.c)
    if(static-cli)
        set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
        set(BUILD_SHARED_LIBS OFF)
        set(CMAKE_EXE_LINKER_FLAGS "-static -s")
        target_link_libraries(clipscli clips-static )
    else()
        set(CMAKE_EXE_LINKER_FLAGS "-s")
        target_link_libraries(clipscli clips )
    endif()
    install(FILES ${HEADER_FILES} DESTINATION include)
    install(TARGETS clipscli clips clips-static
            RUNTIME DESTINATION bin
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
endif()